# Wikidata.Vibes.AI

Wikidata.AlignWithMCP.Langgraph/: main.py  pyproject.toml
Wikidata.AlignWithMCP.SemanticKernel/: .gitignore  Config.cs  ConfigurationManager.cs  ConsoleHelper.cs  ObjectExtensions.cs  Program.cs  README.md  TelemetrySetup.cs  Wikidata.AlignWithMCP.SemanticKernel.csproj  Wikidata.AlignWithMCP.SemanticKernel.sln  agent-instructions.md  appsettings.json
Wikidata.Summarizing.Langgraph/: .gitignore  README.md  main.py  requirements.txt
