[project]
name = "wikidata-alignwithmcp-langgraph"
version = "0.1.0"
description = "Wikidata MCP integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core",  # for langchain_core.messages
    "langchain-mcp-adapters>=0.1.0",
    "langchain-azure-ai>=0.1.3",
    "langgraph>=0.4.5",
    "python-dotenv==1.1.0",
    "typing-extensions>=4.13.2",
]
